RESOLVED FIXED202084
CookieRequestHeaderFieldProxy does not need a SessionID
https://bugs.webkit.org/show_bug.cgi?id=202084
Summary CookieRequestHeaderFieldProxy does not need a SessionID
Chris Dumez
Reported 2019-09-21 19:34:48 PDT
CookieRequestHeaderFieldProxy does not need a SessionID.
Attachments
Patch (5.84 KB, patch)
2019-09-21 19:37 PDT, Chris Dumez
no flags
Patch (5.98 KB, patch)
2019-09-21 19:41 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-21 19:37:27 PDT
Chris Dumez
Comment 2 2019-09-21 19:41:44 PDT
Chris Dumez
Comment 3 2019-09-21 22:15:17 PDT
Comment on attachment 379333 [details] Patch Clearing flags on attachment: 379333 Committed r250191: <https://trac.webkit.org/changeset/250191>
Chris Dumez
Comment 4 2019-09-21 22:15:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-21 22:16:17 PDT
Note You need to log in before you can comment on or make changes to this bug.