CookieRequestHeaderFieldProxy does not need a SessionID https://bugs.webkit.org/show_bug.cgi?id=202084

Reviewed by Alex Christensen.

* Modules/websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::didOpenSocketStream):
* loader/CookieJar.cpp:
(WebCore::CookieJar::cookieRequestHeaderFieldProxy):
* loader/CookieJar.h:
* platform/network/CookieRequestHeaderFieldProxy.h:
(WebCore::CookieRequestHeaderFieldProxy::encode const):
(WebCore::CookieRequestHeaderFieldProxy::decode):

Canonical link: https://commits.webkit.org/215688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250191 268f45cc-cd09-0410-ab3c-d52691b4dbfc